# transgreption

./: .replit  README.rst  pyproject.toml  setup.py  url_transforms.py  word_sandwich.py
static/: script.js  style.css  styles.css
static/fonts/: icomoon.eot
static/styles/: icomoon.css  main.css
templates/: error.html  index.html  no-url.html
tests/: test_word_sandwich.py
